# griblet

./: .codacy.yaml  .gitignore  LICENSE.md  MANIFEST.in  PYPI.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: batsrus_demo.py  box_data.json  box_demo.py  demo_batsrus.py  demo_best_path.py  demo_box.py  demo_dependency_solver.py  demo_networkx.py  demo_rerouting.py  demo_room_graph.py  minimal.py  plots.py  room_demo.py
griblet/: __init__.py  cache.py  computation_graph.py  computation_tree.py  dependency_solver.py  evaluate_tree.py  field_cache.py  graph.py  loader.py  loader_and_cache.py  path.py  pathfinder.py  tree_evaluator.py
tests/: conftest.py  test_examples.py  test_public_api.py
