[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "griblet"
version = "0.1.0"
description = "Carve computation trees from a burl of dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name="Dag Evensberget", email="dag.evensberget@gmail.com" }
]
dependencies = [
    "numpy",
    "astropy"
]

[project.urls]
Homepage = "https://github.com/svaberg/griblet"
Repository = "https://github.com/svaberg/griblet"
Issues = "https://github.com/svaberg/griblet/issues"
