[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "griblet"
version = "0.2.0"
description = "Carve computation trees from a burl of dependencies."
readme = "PYPI.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Dag Evensberget", email = "dag.evensberget@gmail.com" }
]
dependencies = [
    # No core dependencies!
]

[project.optional-dependencies]
dev = [
    "build",
    "pint",
    "pytest",
    "pytest-cov",
    "numpy",
    "networkx",
    "matplotlib",
    "twine",
]

[project.urls]
Homepage = "https://github.com/svaberg/griblet"
Repository = "https://github.com/svaberg/griblet"
Issues = "https://github.com/svaberg/griblet/issues"
